crates/ndc-sqlserver/tests/snapshots/query_tests__sorting__select_order_by_artist_album_count.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      },
      {
        "Name": "Metallica"
      },
      {
        "Name": "U2"
      }
    ]
  }
]
