crates/ndc-sqlserver/tests/snapshots/query_tests__sorting__select_order_by_artist_name.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Let There Be Rock"
      },
      {
        "Name": "The World of Classical Favourites"
      },
      {
        "Name": "Sir Neville Marriner: A Celebration"
      },
      {
        "Name": "Fauré: Requiem, Ravel: Pavane & Others"
      },
      {
        "Name": "Bach: Orchestral Suites Nos. 1 - 4"
      }
    ]
  }
]
