crates/ndc-sqlserver/tests/snapshots/query_tests__sorting__select_order_by_name.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "A Copland Celebration, Vol. I"
      },
      {
        "Title": "A Matter of Life and Death"
      },
      {
        "Title": "A Real Dead One"
      },
      {
        "Title": "A Real Live One"
      },
      {
        "Title": "A Soprano Inspired"
      }
    ]
  }
]
