crates/ndc-sqlserver/tests/snapshots/query_tests__sorting__sorting_by_nested_relationship_column_with_predicate.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "\"?\""
      },
      {
        "Name": "\"40\""
      }
    ]
  }
]
